--- a/Bio.html
+++ b/Bio.html
@@ -1,33 +1,49 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Bio</title>
-<link rel="icon" href="Icons/icon png.png">
-<link href="CSS/bio_styles.css" rel="stylesheet" type="text/css" media="screen">
+    <script src="JS/jquery.js"></script>
+    <script src="JS/bio_jq.js"></script>
+    <script src="JS/common_jquery.js"></script>
+    <meta charset="utf-8">
+    <title>About Me</title>
+    <link rel="icon" href="Icons/icon png.png">
+    <link href="CSS/bio_styles.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
 <body>
-  <div id= "wrapper">
-	<div id = "bg_image">
- 		<img src = "cover_png.png" >
- 	</div>
-	
-	<div id= "BIO"> 
-	  <h3 class="center_text">Hi, I'm Li</h3>
-	  		<p class="sq_bracket">
-				Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestixxxum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
-	  		</p>	
-	</div>
-	
-	<div id = "resume">
-   		<h3>My Resume</h3>
-   			<ul>
-   				<a target= "_blank" href ="ResumeMay17.pdf"> click to see my resume</a>
-   			</ul>
-    </div>
-  </div>
+<div id="nav">
+    <ul>
+        <a href="index.html">HOME</a>
+        <a target="_blank" href="Bio.html">ABOUT</a>
+        <a target="_blank" href="Graphic Design.html">GRAPHIC DESIGN</a>
+        <a target="_blank" href="Projects.html">PROJECTS</a>
+        <a target="_blank" href="Games.html">GAMES</a>
+        <a target="_blank" href="Contacts.html">CONTACT</a>
+    </ul>
+</div>
 
+<div id="name">
+    <h1> Hi, I'm Li</h1>
+</div>
+
+<div id="intro">
+    <p>
+        Hi all! This is Li (I like to be referred to by my last name), and I’m currently a sophomore Electrical & Computer Systems Engineering major at RPI. Since I was the head programmer of the FIRST Robotics Team 1635 at my high school, I have three years of programming / electronics experience in Java & Arduino (elementary), which are further enhanced with my RPI CS classes in Python and C++. And that 3 years did influence my career goals tremendously – I would love to have a career in robotics or AI. Besides that, my interests also include computer hardware, software development, and electronic manufacturing.
+    </p>
+    <p>
+        Prior to my entrance to RPI, I’ve had a brief internship experience in electronic manufacturing at Quadlogic Controls Corp. I was drafting AutoCAD schematics of electronic measuring devices, as well as learning technical skills such as soldering.
+    </p>
+    <p>
+        Besides academia, I also love photography, videography, and graphics designing. Instead of making posters or resumes using templates, I love to add my personal touch of graphics designing into them, making them stand out in the crowd. Instead of making standard PPTs, I love to add unique narratives by making a video, many of them are shot with my DSLR. As a result, I have made a substantial amount of videos for both my robotics team and myself. You can find them at my Youtube Channel https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng/videos.
+    </p>
+    <p>
+        I’m currently looking for a summer internship or an undergraduate research position. You can email me at lij30@rpi.edu and ljw9801055@gmail.com.
+    </p>
+</div>
+
+<div id="footer" class="_center">
+    <h4> &copy; JING WEI LI 2017</h4>
+</div>
 
 </body>
 </html>
