Added Graphic Design Page

--- a/Bio.html
+++ b/Bio.html
@@ -14,11 +14,12 @@
 <div id="nav">
     <ul>
         <a href="index.html">HOME</a>
-        <a target="_blank" href="Bio.html">ABOUT</a>
-        <a target="_blank" href="Graphic Design.html">GRAPHIC DESIGN</a>
-        <a target="_blank" href="Projects.html">PROJECTS</a>
-        <a target="_blank" href="Games.html">GAMES</a>
-        <a target="_blank" href="Contacts.html">CONTACT</a>
+        <a href="Bio.html">ABOUT</a>
+        <a href="Resume.html">RESUME</a>
+        <a href="Graphic Design.html">GRAPHIC DESIGN</a>
+        <a href="Projects.html">PROJECTS</a>
+        <a href="Games.html">GAMES</a>
+        <a href="Contacts.html">CONTACT</a>
     </ul>
 </div>
 
