--- a/Bio.html
+++ b/Bio.html
@@ -6,7 +6,7 @@
     <script src="JS/common_jquery.js"></script>
     <meta charset="utf-8">
     <title>About Me</title>
-    <link rel="icon" href="Icons/icon png.png">
+    <link rel="icon" href="Images/icon png.png">
     <link href="CSS/bio_styles.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
