--- a/Bio.html
+++ b/Bio.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
     <script src="JS/jquery.js"></script>
     <script src="JS/bio_jq.js"></script>
     <script src="JS/common_jquery.js"></script>
