--- a/Bio.html
+++ b/Bio.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
     <script src="JS/jquery.js"></script>
     <script src="JS/bio_jq.js"></script>
@@ -34,6 +35,20 @@
     </nav>
 </div>
 
+<div id="top_mobile_nav">
+    <img id="navicon" src="Images/navicon.png" height="50px" width="50px" >
+</div>
+
+<ul id="mobile_nav">
+    <a id="nav_fist" href="index.html">HOME</a>
+    <a href="Bio.html">ABOUT</a>
+    <a href="Resume.html">RESUME</a>
+    <a href="Graphic Design.html">GRAPHIC DESIGN</a>
+    <a id="nav_projz" href="Projects.html">PROJECTS</a>
+    <a href="Games.html">GAMES</a>
+    <a id="nav_last" href="Contacts.html">CONTACT</a>
+</ul>
+
 <div id="name">
     <h1> Hi, I'm Li</h1>
 </div>
@@ -46,7 +61,7 @@
         Prior to my entrance to RPI, I’ve had a brief internship experience in electronic manufacturing at Quadlogic Controls Corp. I was drafting AutoCAD schematics of electronic measuring devices, as well as learning technical skills such as soldering.
     </p>
     <p>
-        Besides academia, I also love photography, videography, and graphics designing. Instead of making posters or resumes using templates, I love to add my personal touch of graphics designing into them, making them stand out in the crowd. Instead of making standard PPTs, I love to add unique narratives by making a video, many of them are shot with my DSLR. As a result, I have made a substantial amount of videos for both my robotics team and myself. You can find them at my Youtube Channel https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng/videos.
+        Besides academia, I also love photography, videography, and graphics designing. Instead of making posters or resumes using templates, I love to add my personal touch of graphics designing into them, making them stand out in the crowd. Instead of making standard PPTs, I love to add unique narratives by making a video, many of them are shot with my DSLR. As a result, I have made a substantial amount of videos for both my robotics team and myself. You can find them at my <a href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng/videos" >Youtube Channel </a>.
     </p>
     <p>
         I’m currently looking for a summer internship or an undergraduate research position. You can email me at lij30@rpi.edu and ljw9801055@gmail.com.
