--- a/Bio.html
+++ b/Bio.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="CSS/common_fonts.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="CSS/footer_light.css" rel="stylesheet" type="text/css" media="screen">
     <script src="JS/jquery.js"></script>
     <script src="JS/bio_jq.js"></script>
     <script src="JS/common_jquery.js"></script>
@@ -111,11 +112,9 @@
         </div>
     </div>
 
-    <!--DOES NOT WORK HERE UNFORTUNATELY-->
-
-    <!--<div id="mobile_logo">-->
-        <!--<img id="unique" src="Images/PersonalLogo.png">-->
-    <!--</div>-->
+    <div id="mobile_logo">
+        <img id="unique" src="Images/PersonalLogo.png">
+    </div>
     <h4 id="standalone_footer" style="text-align: center"> &copy; JING WEI LI 2017. Proudly Created from Scratch</h4>
 </div>
 
