Now I'm A CS Major :)

--- a/Bio.html
+++ b/Bio.html
@@ -56,7 +56,7 @@
 
 <div id="intro" class="color_white">
     <p>
-        Hi all! This is Li (I like to be referred to by my last name), and I’m currently a sophomore Electrical & Computer Systems Engineering major at RPI. Since I was the head programmer of the FIRST Robotics Team 1635 at my high school, I have three years of programming / electronics experience in Java & Arduino (elementary), which are further enhanced with my RPI CS classes in Python and C++. And that 3 years did influence my career goals tremendously – I would love to have a career in robotics or AI. Besides that, my interests also include computer hardware, software development, and electronic manufacturing.
+        Hi all! This is Li (I like to be referred to by my last name), and I’m currently a sophomore Computer Science & Computer Systems Engineering major at RPI. Since I was the head programmer of the FIRST Robotics Team 1635 at my high school, I have three years of programming / electronics experience in Java & Arduino (elementary), which are further enhanced with my RPI CS classes in Python and C++. And that 3 years did influence my career goals tremendously – I would love to have a career in robotics or AI. Besides that, my interests also include computer hardware, software development, and electronic manufacturing.
     </p>
     <p>
         Prior to my entrance to RPI, I’ve had a brief internship experience in electronic manufacturing at Quadlogic Controls Corp. I was drafting AutoCAD schematics of electronic measuring devices, as well as learning technical skills such as soldering.
