--- a/Bio.html
+++ b/Bio.html
@@ -79,16 +79,42 @@
 
 <div id="intro" class="color_white">
     <p>
-        Hi all! This is Li (I like to be referred to by my last name), and I’m currently a sophomore Computer Science & Computer Systems Engineering major at RPI. Since I was the head programmer of the FIRST Robotics Team 1635 at my high school, I have three years of programming / electronics experience in Java & Arduino (elementary), which are further enhanced with my RPI CS classes in Python and C++. And that 3 years did influence my career goals tremendously – I would love to have a career in robotics or AI. Besides that, my interests also include computer hardware, software development, and electronic manufacturing.
+        Hi all! This is Li (I like to be referred to by my last name), and I’m a rising junior majoring in Computer
+        Science & Computer Systems Engineering at RPI. The inception of my career was in the sophomore year of high
+        school, where I joined the FIRST Robotics Team. I fell in love with computer science and electrical engineering
+        portion of it almost immediately. Before I knew it, I became the programming team captain and programmed three
+        fantastic robots along with other programmers in my team. Three years later, I was admitted to RPI, and graduated
+        high school with a internship in NYC, where I designed AutoCAD models of electrical products and gained a plethora
+        of hands-on experience in electronics manufacturing.
     </p>
     <p>
-        Prior to my entrance to RPI, I’ve had a brief internship experience in electronic manufacturing at Quadlogic Controls Corp. I was drafting AutoCAD schematics of electronic measuring devices, as well as learning technical skills such as soldering.
+        When I entered RPI, the focus of my career shifted to software development, as I perfected my programming skills
+        with programming languages including Python, Java, C++ and C, as well as core concepts such as Data Structures
+        and Algorithms.  The summer after my freshman year, I was hooked to web design, and moved on to produce my personal
+        website with technologies including HTML, CSS, JavaScript, jQuery, ReactJS and Sass. You are welcome to checkout
+        all of my development experiences, precisely documented on <a href="https://github.com/ljw980105/">GitHub </a>.
     </p>
     <p>
-        Besides academia, I also love photography, videography, and graphics designing. Instead of making posters or resumes using templates, I love to add my personal touch of graphics designing into them, making them stand out in the crowd. Instead of making standard PPTs, I love to add unique narratives by making a video, many of them are shot with my DSLR. As a result, I have made a substantial amount of videos for both my robotics team and myself. You can find them at my <a href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng/videos" >Youtube Channel </a>.
+        It was also that summer that I started to take Stanford’s CS193P class in iOS Development. By the end of 2017, I
+        produced my own calculator app and a Twitter client, and I was shocked on how much I love mobile development.
+        My skills in iOS dev increased exponentially as I mastered Swift, Objective-C and numerous first-party and third-party
+        iOS frameworks. During the spring of 2018, I obtained a research position in RPI, where I went on to make an
+        Augmented Reality App to view three dimensional models, with the ultimate goal of improving the quality of STEM education.
+        During that summer, I secured a mobile software engineering internship in Modernizing Medicine, where I was tasked
+        to work on medical technology apps capable of improving the lives of over 160 million patients.
     </p>
     <p>
-        I’m currently looking for a summer internship or an undergraduate research position. You can email me at lij30@rpi.edu and ljw9801055@gmail.com.
+
+        Besides academia, I also love photography, videography, and graphics design. I have been working in RPI as graphic
+        designer for over a year now, and I totally love that job. Instead of making posters or resumes using templates,
+        I love to add my personal touch of graphics designing into them, making them stand out in the crowd. Instead of
+        making standard PPTs, I love to add unique narratives by making a video, many of them are shot with my DSLR. As
+        a result, I have made a substantial amount of videos for both my robotics team and myself. You can find them at
+        my <a href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng">Youtube Channel</a> .
+    </p>
+
+    <p>
+        If you have any inquiries, you are welcome to email me at lij30@rpi.edu and ljw9801055@gmail.com.
     </p>
 </div>
 
