--- a/Bio.html
+++ b/Bio.html
@@ -81,11 +81,11 @@
     <p>
         Hi all! This is Li (I like to be referred to by my last name), and I’m a rising junior majoring in Computer
         Science & Computer Systems Engineering at RPI. The inception of my career was in the sophomore year of high
-        school, where I joined the FIRST Robotics Team. I fell in love with computer science and electrical engineering
+        school, when I joined the FIRST Robotics Team. I fell in love with computer science and electrical engineering
         portion of it almost immediately. Before I knew it, I became the programming team captain and programmed three
         fantastic robots along with other programmers in my team. Three years later, I was admitted to RPI, and graduated
         high school with a internship in NYC, where I designed AutoCAD models of electrical products and gained a plethora
-        of hands-on experience in electronics manufacturing.
+        of hands-on experiences in electronics manufacturing.
     </p>
     <p>
         When I entered RPI, the focus of my career shifted to software development, as I perfected my programming skills
@@ -96,16 +96,15 @@
     </p>
     <p>
         It was also that summer that I started to take Stanford’s CS193P class in iOS Development. By the end of 2017, I
-        produced my own calculator app and a Twitter client, and I was shocked on how much I love mobile development.
+        produced my own music client app and a Twitter client, and I was shocked on how much I love mobile development.
         My skills in iOS dev increased exponentially as I mastered Swift, Objective-C and numerous first-party and third-party
         iOS frameworks. During the spring of 2018, I obtained a research position in RPI, where I went on to make an
         Augmented Reality App to view three dimensional models, with the ultimate goal of improving the quality of STEM education.
-        During that summer, I secured a mobile software engineering internship in Modernizing Medicine, where I was tasked
-        to work on medical technology apps capable of improving the lives of over 160 million patients.
+        The summer after my sophomore year, I secured a mobile software engineering internship at Modernizing Medicine,
+        where I was tasked to work on medical technology apps capable of improving the lives of over 160 million patients.
     </p>
     <p>
-
-        Besides academia, I also love photography, videography, and graphics design. I have been working in RPI as graphic
+        Besides academia, I also love photography, videography, and graphic design. I have been working at RPI as graphic
         designer for over a year now, and I totally love that job. Instead of making posters or resumes using templates,
         I love to add my personal touch of graphics designing into them, making them stand out in the crowd. Instead of
         making standard PPTs, I love to add unique narratives by making a video, many of them are shot with my DSLR. As
