--- a/Bio.html
+++ b/Bio.html
@@ -125,7 +125,7 @@
 
     <div id="footerx">
         <div id="personal_logo">
-            <img style="margin-top: 18px" src="Images/PersonalLogoBlack.png">
+            <img style="margin-top: 18px" src="Images/PersonalLogo.png">
         </div>
         <div id="section1">
             <div id="navigation">
